--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,10 @@ flume-fuse = "bin.flume_fuse:main"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 88
+
+[tool.isort]
+profile = "black"
+line_length = 88
